# ffplayer

./: .gitignore  CMakeLists.txt  meson.build  meson_options.txt
examples/sdl2/: CMakeLists.txt  main.c  meson.build
include/: clock.h  decoder.h  ff_frame.h  ff_frame_queue.h  ff_packet_queue.h  ff_player.h  player.h
src/: clock.c  decoder.c  ff_clock.c  ff_decoder.c  ff_frame_queue.c  ff_packet_queue.c  ff_player.c  frame_queue.c  packet_queue.c  player.c
